[workspace]
members = [
  "rarena",
  "rarena-allocator",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/al8n/rarena"
homepage = "https://github.com/al8n/rarena"
license = "MIT OR Apache-2.0"

[workspace.dependencies]

crossbeam-utils = { version = "0.8", default-features = false }
loom = "0.7"
rarena-allocator = { version = "0.6", path = "./rarena-allocator", default-features = false }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
