[package]
name = "rarena-allocator"
version = "0.2.4"
edition.workspace = true
repository.workspace = true
homepage = "https://github.com/al8n/rarena/tree/main/rarena-allocator"
documentation = "https://docs.rs/rarena-allocator"
description = "Lock-free ARENA allocator which can be used in both memory and on-disk."
license.workspace = true
rust-version.workspace = true
categories = ["data-structures", "memory-management", "concurrency", "no-std"]
keywords = ["arena", "lock-free", "allocator"]

[features]
default = ["std"]
alloc = []
std = ["byteorder", "either/default", "dbutils/std"]
memmap = ["memmap2", "fs4", "std", "rustix", "bitflags/std"]

loom = ["dep:loom", "std", "crossbeam-utils/loom"]

# A feature only used for testing purposes.
reserved = ["alloc"]

[dependencies]
bitflags = { version = "2", default-features = false }
byteorder = { version = "1", optional = true }
crossbeam-utils.workspace = true 
dbutils = { version = "0.3", default-features = false }
either = { version = "1", default-features = false }
paste = "1"

fs4 = { version = "0.9", optional = true }
memmap2 = { version = "0.9", optional = true }
rustix = { version = "0.38", optional = true, features = ["mm", "param"] }

loom = { workspace = true, optional = true }

tracing = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "sysinfoapi"] }

[dev-dependencies]
tempfile = "3"
wg = "0.9"
crossbeam-queue = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crc32fast = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
