[package]
name = "rarena-skiplist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage = "https://github.com/al8n/rarena/tree/main/rarena-skiplist"
license.workspace = true

[features]
default = ["std"]
alloc = ["rarena-allocator/alloc"]
std = ["rarena-allocator/std", "rand/default"]
memmap = ["rarena-allocator/memmap", "std"]

loom = ["rarena-allocator/loom", "dep:loom", "std"]

[dependencies]
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
rarena-allocator.workspace = true

loom = { workspace = true, optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

